Fix Navbar Title Link (z-index)

--- a/src/app/styles/layout/_navbar.scss
+++ b/src/app/styles/layout/_navbar.scss
@@ -8,8 +8,9 @@ header {
   font-weight: 500;
   padding: 0 2.5%;
   position: absolute;
+  height: 70px;
   width: 95%;
-  z-index: 5;
+  z-index: 1;
 
   & .title-link {
     align-items: center;
@@ -18,7 +19,9 @@ header {
     font-size: 1.5rem;
     height: 70px;
     text-decoration: none;
-    z-index: 6;
+    position: relative;
+    width: 200px;
+    z-index: 2;
   }
 
   .navbar {
